--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-rainbow-components": "^1.32.0",
     "react-router-dom": "^6.23.1",
     "recharts": "^2.12.7"
   },
